# xHD-Wallet-API-py

./: .gitignore  .gitmodules  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci_cd.yml
src/xhd_wallet_api_py/: __init__.py  ed25519_bip32.py  libed25519_bip32.dylib
tests/: test_ed25519_bip32.py
