[project]
name = "xhd-wallet-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joe Polny", email = "joepolny@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cffi>=2.0.0",
    "types-cffi>=1.17.0.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhd_wallet_api_py"]
include = ["src/xhd_wallet_api_py/*.dylib", "src/xhd_wallet_api_py/*.so", "src/xhd_wallet_api_py/*.dll"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "auditwheel>=6.6.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
